objects/Contract_Tier_Set_Period__c.object
<CustomObject>
    <fields>
        <fullName>Burst_Quantity__c</fullName>
        <formula>Total_Usage__c - Contract_Tier_Set__r.Order_Original_Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Burst Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contract_Name__c</fullName>
        <formula>Contract_Tier_Set__r.Contract__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Tier_Set__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract Tier Set</label>
        <referenceTo>Contract_Tier_Set__c</referenceTo>
        <relationshipName>Contract_Tier_Set_Periods</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <formula>Contract_Tier_Set__r.Contract__r.Name</formula>
        <label>Contract</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Max_Usage__c</fullName>
        <label>Max Usage</label>
        <summarizedField>Contract_Tier_Set_Month__c.Max_Usage__c</summarizedField>
        <summaryForeignKey>Contract_Tier_Set_Month__c.Contract_Tier_Set_Period__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Period_In_Months__c</fullName>
        <formula>IF(
ISNUMBER(Text(Contract_Tier_Set__r.Period_In_Months__c)),
VALUE(Text(Contract_Tier_Set__r.Period_In_Months__c)),
1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Period In Months</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Platform_Id__c</fullName>
        <description>The Platform Id for which this Peroid of activity represents</description>
        <inlineHelpText>The Platform Id for which this Peroid of activity represents</inlineHelpText>
        <label>Platform Id</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Name__c</fullName>
        <description>The Source Name of the Platform Id</description>
        <inlineHelpText>The Source Name of the Platform Id</inlineHelpText>
        <label>Source Name</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sum_Count__c</fullName>
        <description>Sum of the Contract Tier Set Month Sum Count field. For reporting the number of calls producing a total number of minutes for example.</description>
        <inlineHelpText>Sum of the Contract Tier Set Month Sum Count field. For reporting the number of calls producing a total number of minutes for example.</inlineHelpText>
        <label>Sum Count</label>
        <summarizedField>Contract_Tier_Set_Month__c.Sum_Count__c</summarizedField>
        <summaryForeignKey>Contract_Tier_Set_Month__c.Contract_Tier_Set_Period__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Sum_Usage__c</fullName>
        <label>Sum Usage</label>
        <summarizedField>Contract_Tier_Set_Month__c.Sum_Usage__c</summarizedField>
        <summaryForeignKey>Contract_Tier_Set_Month__c.Contract_Tier_Set_Period__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Outbound_Calls_Cost__c</fullName>
        <label>Total Outbound Calls Cost</label>
        <summarizedField>Contract_Tier_Set_Month__c.Total_Outbound_Calls_Cost__c</summarizedField>
        <summaryForeignKey>Contract_Tier_Set_Month__c.Contract_Tier_Set_Period__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Usage__c</fullName>
        <formula>IF(ISPICKVAL(Contract_Tier_Set__r.Aggregation_Model__c,&apos;Max Per Month&apos;),Max_Usage__c,Sum_Usage__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Usage (Period)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Contract Tier Set Period</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Contract_Tier_Set__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Sum_Usage__c</columns>
        <columns>Max_Usage__c</columns>
        <columns>Total_Usage__c</columns>
        <columns>Total_Outbound_Calls_Cost__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Erik_and_Sourav</fullName>
        <columns>Contract_Tier_Set__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Sum_Usage__c</columns>
        <columns>Max_Usage__c</columns>
        <columns>Total_Usage__c</columns>
        <columns>Total_Outbound_Calls_Cost__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Contract_Tier_Set__c</field>
            <operation>contains</operation>
            <value>Erik</value>
        </filters>
        <label>Erik and Sourav</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Multiple_Month_Periods</fullName>
        <columns>Contract_Tier_Set__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Sum_Usage__c</columns>
        <columns>Max_Usage__c</columns>
        <columns>Total_Usage__c</columns>
        <columns>Total_Outbound_Calls_Cost__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Period_In_Months__c</field>
            <operation>greaterThan</operation>
            <value>1</value>
        </filters>
        <label>Multiple Month Periods</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Contract Tier Set Period Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contract Tier Set Periods</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>